--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<app-ng2-calender [events]="events" [label]="label" (clickobject)="doSomething($event)"></app-ng2-calender>
+<app-ng2-calendar [events]="events" [label]="label" (clickobject)="doSomething($event)"></app-ng2-calendar>
 <!--<app-demo (clickobject)="doSomething($event)"></app-demo>-->
